>Fix a layout issue that the playlist covers the settings panel +1.2.12.zip

--- a/src/css/video.less
+++ b/src/css/video.less
@@ -1,5 +1,13 @@
 @import 'basic.less';
 
+.bilibili-player-recommend {
+    z-index: 1 !important;
+}
+
+.bilibili-player-block {
+    z-index: 1 !important;
+}
+
 .bp-list-container {
     overflow-y: auto;
 
